--- a/land/index.html
+++ b/land/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <style>
         body {
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
+          background: linear-gradient(to bottom right, #3494e6, #ec6ead);
+          margin: 0;
+          padding: 0;
         }
 
 
