--- a/land/index.html
+++ b/land/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <style>
         body {
-          background: linear-gradient(to bottom right, #3494e6, #ec6ead);
-          margin: 0;
-          padding: 0;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
         }
 
 
@@ -26,7 +26,7 @@
             border: 1px solid #ccc;
             background: #fff;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            padding: 20px;
+            padding: 50px;
             border-radius: 10px;
             transform: perspective(600px) rotateY(0deg);
             transition: transform 0.5s;
@@ -378,7 +378,7 @@
                       <span></span>
                       <div>
                           <p>
-                              <img src="https://bookinsman.com/chat34po"><img src="https://lh3.googleusercontent.com/Nc_mXHSgVjyJh4inExzQQdEWoce39QwM0_UU7NEaRtgLVwXUjNnjq9nfwBN3Q6kjctfuwneJXOkGLbs7HNqksiI3RFUm5JzSXHQlq9Gb84lL4hCIadBpd-PzDkQ74qsRx91KCJXXSA=w2400" alt="Image 5">
+                              <img src="https://lh3.googleusercontent.com/Nc_mXHSgVjyJh4inExzQQdEWoce39QwM0_UU7NEaRtgLVwXUjNnjq9nfwBN3Q6kjctfuwneJXOkGLbs7HNqksiI3RFUm5JzSXHQlq9Gb84lL4hCIadBpd-PzDkQ74qsRx91KCJXXSA=w2400" alt="Image 5">
                           </p>
                       </div>
                   </a>
