--- a/land/index.html
+++ b/land/index.html
@@ -40,8 +40,6 @@
             max-width: 100%;
             height: auto;
             border-radius: 12px;
-            box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5); /* Add a 3D shadow */
-
             
         }
 
@@ -57,7 +55,7 @@
             }
         }
     </style>
-    <title>TikTok Slider</title>
+    <title>bookinsman</title>
 </head>
 <body>
     <section>
