--- a/land/index.html
+++ b/land/index.html
@@ -405,32 +405,45 @@
     </section>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
-        var swiper = new Swiper(".swiper", {
-            effect: "coverflow",
-            grabCursor: true,
-            centeredSlides: true,
-            slidesPerView: "auto",
-            coverflowEffect: {
-                rotate: 0,
-                stretch: 0,
-                depth: 100,
-                modifier: 2,
-                slideShadows: true
-            },
-            keyboard: {
-                enabled: true
-            },
-            mousewheel: {
-                thresholdDelta: 70
-            },
-            spaceBetween: 60,
-            loop: true,
-            pagination: {
-                el: ".swiper-pagination",
-                clickable: true
-            }
-        });
-    </script>
+      document.addEventListener("DOMContentLoaded", function () {
+          var swiper = new Swiper(".swiper", {
+              effect: "coverflow",
+              grabCursor: true,
+              centeredSlides: true,
+              slidesPerView: "auto",
+              coverflowEffect: {
+                  rotate: 0,
+                  stretch: 0,
+                  depth: 100,
+                  modifier: 2,
+                  slideShadows: true
+              },
+              keyboard: {
+                  enabled: true
+              },
+              mousewheel: {
+                  thresholdDelta: 70
+              },
+              spaceBetween: 60,
+              loop: true,
+              pagination: {
+                  el: ".swiper-pagination",
+                  clickable: true
+              }
+          });
+
+          var slides = document.querySelectorAll(".swiper-slide");
+          slides.forEach(function (slide) {
+              slide.addEventListener("click", function (event) {
+                  event.preventDefault();
+                  var link = this.querySelector("a");
+                  if (link) {
+                      window.location.href = link.getAttribute("href");
+                  }
+              });
+          });
+      });
+  </script>
 
 </body>
 </html>
