--- a/land/index.html
+++ b/land/index.html
@@ -58,6 +58,7 @@
     <title>bookinsman</title>
 </head>
 <body>
+  
     <section>
         <div class="swiper">
             <div class="swiper-wrapper">
@@ -66,6 +67,7 @@
                         <span></span>
                         <div>
                             <p>
+                               <a href="https://bookinsman.com/chat7n">
                                 <img src="https://lh3.googleusercontent.com/uHkmsfsgC0WOstwxjc5EyjFsfgVupqypydak3cLK49rJgjHylLXZPJHNH5q9emA6rM9-eBuXL5w10JfmClvv4bX38xHHe736-ZDioCct-NMv9ZOn5nl4LS7LrP6BdQ6tQtWUw1Zqgg=w2400" alt="Hawaii, USA">
                             </p>
                         </div>
