--- a/land/index.html
+++ b/land/index.html
@@ -81,6 +81,7 @@
                         <span></span>
                         <div>
                             <p>
+                                <a href="https://bookinsman.com/chat8d">
                                 <img src="https://lh3.googleusercontent.com/SdeA9VuzbuRNSaO5wFBPvrdNrpyq4uAt6MBSIabEeIVOqX8ayRQyyEdwMlBmGyHFj9szkhFHKbp4Km6M9Pi0MyfcB3kUs0DFuNj5LdzWaiI8rcO9wl_eI-nzjg7-Rt5bDjD1HS9R2A=w2400" alt="Image 2">
                             </p>
                         </div>
@@ -92,6 +93,7 @@
                         <span></span>
                         <div>
                             <p>
+                                <a href="https://bookinsman.com/chat9er">
                                 <img src="https://lh3.googleusercontent.com/ycehVmAXzIVmn65kOv20xPpW-aKWGWDYOI7ZTO0KPhenjOfhmOSf4Jfe7soH7_GwbWI6fh6kxrzeINsofcOwbzZ3UZnfxSaKHj_4NhgEUF5L9bPdbHuzKHgWKAegFsDzZ4hVWUZnsA=w2400" alt="Image 3">
                             </p>
                         </div>
@@ -103,6 +105,7 @@
                       <span></span>
                       <div>
                           <p>
+                              <a href="https://bookinsman.com/chat10pt">
                               <img src="https://lh3.googleusercontent.com/uWTxJVDMA8ts0q94aPUnVCL3aPTL4jDs7-uqMpXJ_xeiFrMfzHovIR0DjU84Eker9hp0I26c1vrQjCjHydZuloLhb5rgWBj-hffadJd1wius3_8VhDeYk8MiHAvjbqTDDB-ulKJlvg=w2400" alt="Image 2">
                           </p>
                       </div>
@@ -114,6 +117,7 @@
                     <span></span>
                     <div>
                         <p>
+                             <a href="https://bookinsman.com/chat11ga">
                             <img src="https://lh3.googleusercontent.com/H8Kh8P5LvyuI9b0R_QAT3gI-Bfx216Vgp80VDrALwpXXSltKtBHbKktASA2LLNjDS0uVdjNu3zI2spLza1ucY_eZw9sWvsU_5fveRapNh6gk7wnvYvf5wzMa-7AbZfkOQ4mOopoRSw=w2400" alt="Image 3">
                         </p>
                     </div>
@@ -125,6 +129,7 @@
                   <span></span>
                   <div>
                       <p>
+                          <a href="https://bookinsman.com/chat12po">
                           <img src="https://lh3.googleusercontent.com/lx7rNXBI2pcbSDicwVMIH3_YehWAAu36YQw0iqVK98IdrdMSmI1pI6sbFoJH-rOsFamlkNpw-j_Ykdq3GaM9qoDvcKjtF9xDfzLo-8dw0lBLC1iwB04bSXR_DS9H7oIizN_B43cqtA=w2400" alt="Image 2">
                       </p>
                   </div>
