--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="content">
         <h3> <span class="line-down">Saviugdos</span> programa paaugliams! </h3>
-        <p>Ar esate žinių ištroškęs paauglys, bet tradicinis mokymas jums atrodo nuobodus? Norite mokytis savarankiškai, bet sunku įsipareigoti skaityti ilgos apimties medžiagą? Ne problema! Sukūrėme unikalią platformą, skirtą specialiai tokiems paaugliams kaip jūs, kurie nori mokytis be vargo.</p>
+        <p>Šiais laikais geriausia dovana vaikui – uždegti norą mokytis savarankiškai ir padaryti šią kelionę lengvesne. Sukūrėme platformą būtent tam. Dovanokite mokymosi džiaugsmą.</p>
         <img src="https://lh3.googleusercontent.com/pw/AIL4fc-lnXzi4O8PGadJDxV-myHklheE5otzuaxYZ1dXd06c807CtrkuTdOD2YAbsX6dxGfihiVqoTzLb6fAugu95AHl8U1Qhb-wVaPQP9-kkJ2BBKlIcok=w2400" alt="Company Logo" width="140px" height="30px" />
 
     </div>
@@ -305,7 +305,7 @@
         </div>
 
         <div class="share">
-            <a href="https://www.facebook.com/vladislav.fedin.9" class="fab fa-facebook-f"></a>
+            <a href="https://www.facebook.com/profile.php?id=100070398671775" class="fab fa-facebook-f"></a>
             <a href="https://www.linkedin.com/in/vladislav-fedin-b90803284" class="fab fa-linkedin"></a>
         </div>
 
