--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="content">
         <h3> <span class="line-down">Saviugdos</span> programa paaugliams! </h3>
-        <p>Šiais laikais geriausia dovana vaikui – uždegti norą mokytis savarankiškai ir padaryti šią kelionę lengvesne. Sukūrėme platformą būtent tam. Dovanokite mokymosi džiaugsmą.</p>
+        <p>Šiais laikais geriausia dovana vaikui – įžiebti norą mokytis savarankiškai ir padaryti šią kelionę lengvesne. Sukūrėme platformą būtent tam. Dovanokite mokymosi džiaugsmą.</p>
         <img src="https://lh3.googleusercontent.com/pw/AIL4fc-lnXzi4O8PGadJDxV-myHklheE5otzuaxYZ1dXd06c807CtrkuTdOD2YAbsX6dxGfihiVqoTzLb6fAugu95AHl8U1Qhb-wVaPQP9-kkJ2BBKlIcok=w2400" alt="Company Logo" width="140px" height="30px" />
 
     </div>
